add views and doses ingredient controller

--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -13,5 +13,5 @@
 <p> dose.description</p>
 <% end %>
 
-<%= link_to "edit", new_cocktail_dose_path %>
+<%= link_to "+ add a new dose", new_cocktail_dose_path(@cocktail) %>
 <%= link_to "back", cocktails_path %>
