--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -1,7 +1,6 @@
 <div>
   <%= simple_form_for @cocktail do |f| %>
-    <%= f.input :name %>
-    <%= f.association :ingredients %>
+    <%= f.input :name %> <!--add error-->
     <%= f.button :submit  %>
 
   <% end %>
