add photo to cocktail model

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,6 +1,7 @@
 <h1>ALL COCKTAILS</h1>
 
-
+<%= cl_image_tag("cnriphoywnwjmcu62d4l",
+      width: 400, height: 300, crop: :fill) %>
 
 <div class="container">
   <div class="row">
