--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -2,6 +2,8 @@
   <%= simple_form_for @cocktail do |f| %>
     <%= f.input :name %> <!--add error-->
     <%= f.button :submit  %>
-
+    <%= simple_form_for(article) do |f| %>
+      <%= f.input :photo %>
+      <%= f.input :photo_cache, as: :hidden %>
   <% end %>
 </div>
