--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -1,9 +1,10 @@
 <div>
   <%= simple_form_for @cocktail do |f| %>
+  <div class="form-inputs">
     <%= f.input :name %> <!--add error-->
+    <%= f.input :photo %>
+    <%= f.input :photo_cache, as: :hidden %>
     <%= f.button :submit  %>
-    <%= simple_form_for(article) do |f| %>
-      <%= f.input :photo %>
-      <%= f.input :photo_cache, as: :hidden %>
+    </div>
   <% end %>
 </div>
