--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,7 +1,9 @@
 <h1>Doses#new</h1>
 
-<%= simple_form_for [@cocktail, @dose] do |f| %>
+<% simple_form_for [@cocktail, @dose] do |f| %>
   <%= f.input :description %>
   <%= f.association :ingredient %>
   <%= f.button :submit %>
 <% end %>
+
+<%= link_to  %>
