--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -3,7 +3,7 @@
   <div class="form-inputs">
     <%= f.input :name %> <!--add error-->
     <%= f.input :photo %>
-    <%= f.input :photo_cache, as: :hidden %>
+    <!--<%= f.input :photo_cache, as: :hidden %>-->
     <%= f.button :submit  %>
     </div>
   <% end %>
