--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,10 @@
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
+ @import "cocktails";
+ @import "footer";
+ @import "navbar";
+ @import "card";
+ @import "banner";
+
+
