--- a/app/assets/stylesheets/cocktails.scss
+++ b/app/assets/stylesheets/cocktails.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the cocktails controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+  font-family: "Lato", sans-serif;
+}
+
+a {
+  font-family: 'Oswald', sans-serif;
+  color:black;
+  font-size:24px;
+}
+
