--- a/app/views/cocktails/edit.html.erb
+++ b/app/views/cocktails/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', cocktail: @cocktail %>
 
-<%= link_to 'Show', @cocktail %> |
+<%= link_to 'Show', @cocktail %>
 <%= link_to 'Back', cocktails_path %>
