--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,4 +1,10 @@
-<h1>Create A New Cocktail</h1>
-<%= render 'form', cocktail: @cocktail %>
+<div class="container text-center">
+  <h1>Create A New Cocktail</h1>
+  <%= simple_form_for @cocktail, {class:'form-inline'} do |f| %>
+    <%= f.input :name %> <!--add error-->
+    <%= f.input :photo %>
+    <%= f.input :photo_cache, as: :hidden %>
+    <%= f.button :submit, class:"btn btn-primary" %>
+  <% end %>
+</div>
 
-<%= link_to 'Back', cocktails_path %>
