--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,9 +1,10 @@
-<h1>Doses#new</h1>
+ <div class="container">
+  <div class="row">
+    <%= simple_form_for [@cocktail, @dose] do |f| %>
+      <%= f.input :description %>
+      <%= f.association :ingredient %>
+      <%= f.button :submit %>
+    <% end %>
+  </div>
+</div>
 
-<% simple_form_for [@cocktail, @dose] do |f| %>
-  <%= f.input :description %>
-  <%= f.association :ingredient %>
-  <%= f.button :submit %>
-<% end %>
-
-<%= link_to  %>
